konfiguracje na różnych etapach
